--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
     <!-- Main met canvas -->
     <main>
-      <canvas id="canvas"></canvas>
+      <canvas id="canvas" width="500" height="500"></canvas>
     </main>
 
     <!-- JavaScript -->
+    <script src="./js/vector.js"></script>
+    <script src="./js/boid.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
